# Ingram

./: .editorconfig  .gitignore  .gitmodules  .yarnrc.yml  Cargo.toml  OVMF.fd  README.md  deno.jsonc  package.json  x86_64-unknown-uefi.json
.github/workflows/: build.yml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/js/: index.d.ts  index.ts  pci.ts  process.ts  rtc.ts
kernel/src/: acpi.rs  apic.rs  constant.rs  gdt.rs  interrupt.rs  lib.rs  linker.ld  main.rs  uart.rs
kernel/src/allocator/: linked_list_allocator.rs  mod.rs
scripts/: build.rb  build.ts  build_js.ts  env.ts  gen_target.rb  gen_target.ts  run.rb  run.ts
src/: acpi.rs  apic.rs  constant.rs  gdt.rs  interrupt.rs  interrupts.rs  lib.rs  linker.ld  main.rs  memory.rs  port.rs  process.rs  rtc.rs  serial.rs  uart.rs
src/allocator/: hole.rs  mod.rs
tests/: allocator.rs  stack_overflow.rs
uefi/: Cargo.toml
uefi/src/: display.rs  error.rs  fs.rs  io.rs  main.rs
user/: a.ts  b.ts  c.ts
