[package]
name = "ingram"
version = "0.1.0"
edition = "2021"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = ["kernel"]
resolver = "2"

[dependencies]
boa_engine = { path = "./boa/boa_engine" }
ingram-kernel = { path = "./kernel" }

libm = "0.2"

[dev-dependencies]
spin = "0.9"
x86_64 = "0.14"

[profile.release]
codegen-units = 1
lto = true
