[package]
name = "ingram-uefi"
version = "0.1.0"
edition = "2021"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
x86 = "0.47"

[dependencies.goblin]
version = "0.5"
default-features = false
features = ["elf32", "elf64", "endian_fd"]

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.uefi]
version = "0.15"
features = ["alloc", "exts", "logger"]

[dependencies.uefi-services]
version = "0.12"
features = ["qemu"]
